--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,24 @@
 appdirs==1.4.4
 asn1crypto==0.24.0
+astroid==2.4.2
 attrs==17.4.0
 Automat==0.6.0
+bcrypt==3.2.0
 blinker==1.4
 certifi==2020.11.8
+cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
 cloud-init==18.5
-colorama==0.3.7
+colorama==0.4.4
 command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
-cryptography==2.1.4
+cryptography==3.2.1
 dataclasses==0.8
 distlib==0.3.1
 distro-info===0.18ubuntu0.18.04.1
+ecdsa==0.14.1
 fastapi==0.61.2
 filelock==3.0.12
 h11==0.11.0
@@ -24,6 +28,7 @@ idna==2.10
 importlib-metadata==2.0.0
 importlib-resources==3.3.0
 incremental==16.10.1
+isort==5.6.4
 Jinja2==2.10
 jsonpatch==1.16
 jsonpointer==1.10
@@ -31,36 +36,50 @@ jsonschema==2.6.0
 keyring==10.6.0
 keyrings.alt==3.0
 language-selector==0.1
+lazy-object-proxy==1.4.3
 MarkupSafe==1.0
+mccabe==0.6.1
 netifaces==0.10.4
 oauthlib==2.0.6
 PAM==0.4.2
-pyasn1==0.4.2
+passlib==1.7.4
+pyasn1==0.4.8
 pyasn1-modules==0.2.1
+pycparser==2.20
 pycrypto==2.6.1
 pydantic==1.7.2
 pygobject==3.26.1
 PyJWT==1.5.3
+pylint==2.6.0
 pyOpenSSL==17.5.0
 pyserial==3.4
 python-apt==1.6.4
 python-debian==0.1.32
+python-jose==3.2.0
+python-multipart==0.0.5
+pytube==9.7.2
 pyxdg==0.25
 PyYAML==3.12
+redis==3.5.3
 requests==2.25.0
 requests-unixsocket==0.1.5
+rsa==4.6
 SecretStorage==2.3.1
 service-identity==16.0.0
 six==1.15.0
+soupsieve==2.0.1
 ssh-import-id==5.7
 starlette==0.13.6
 systemd-python==234
+toml==0.10.2
 Twisted==17.9.0
+typed-ast==1.4.1
 typing-extensions==3.7.4.3
 ufw==0.36
 unattended-upgrades==0.1
-urllib3==1.26.1
+urllib3==1.26.2
 uvicorn==0.12.2
 virtualenv==20.1.0
+wrapt==1.12.1
 zipp==3.4.0
 zope.interface==4.3.2
